# CREMIfiles

./: .gitignore  cours_1-numpy.ipynb  test.txt
Compilation/: cours.md
IF344_Analyse/: notesTP1.md
IF344_Analyse/Code/: ACP.R  partitionnement.R
IF344_Analyse/Data/: synth_train.txt
IF344_Analyse/apprentissageNonSupervise/: notesTP1.md  renduTP1.md
IF344_Analyse/apprentissageSuperviseClassification/: notesTP3.md
IF344_Analyse/apprentissageSuperviseRegression/: notesTP2.md
IS322Visu/: .gitignore  notesLectureDArticle.md
IS322Visu/asteroid/: .gitignore
IS322Visu/tp1/: .gitignore  tp1.md
IS322Visu/tp3/: tp2.md  tp3.md
IS322Visu/tp4/: tp4.md  vtk-python-example.py  vtkViewer.py
IS323_STD_PLE/: .gitignore  TP1.md  TP2.md  mapreduce_wordcounter.tgz  mapreduce_wordcounter_python.tgz  tp1Exec3pyComb.out
IS323_STD_PLE/TP1/: tp1Exec1.out  tp1Exec2.out  tp1Exec3py.out
IS323_STD_PLE/TP2/: TP2.md  seeData.ipynb
IS323_STD_PLE/TP3/: TP3.md  spark_examples.tgz
IS323_STD_PLE/TP4/: TP4.md  scalaResult.out
IS323_STD_PLE/TP6/: TP4.md  TP6.md
IS323_STD_PLE/TP7/: TP7.md
IS323_STD_PLE/mapreduce_citypop/: pom.xml
IS323_STD_PLE/mapreduce_multipleJob/: pom.xml
IS323_STD_PLE/mapreduce_topcity/: pom.xml
IS323_STD_PLE/mapreduce_wordcounter/: pom.xml
IS328_T_in-situ/: note.md  noteTP1.md  noteTP2.md
IS328_T_in-situ/projet/: noteTprojet.md
IS328_T_in-situ/traces/: trace1.vite  trace2.vite  trace3.vite  trace4.vite  trace5.vite  trace6.vite  trace7.vite  trace8.vite  traceHisto4.vite  traceHisto4_40.vite  traceHisto8.vite  traceHisto8_40.vite
IS329_fouille/project/: Projet-DL-Image.ipynb
IS329_fouille/tp1/: Introduction-NLP-Correction.ipynb  Introduction-NLP.ipynb  README.txt  requirements.txt
IS329_fouille/tp2/: Donner-du-sens.ipynb  Google-Word2Vec.ipynb  TP-Word2Vec.ipynb  requirements.txt
IS329_fouille/tp3/: DeeplearningForNLP.ipynb  HowToUseHuggingFace.ipynb  TP-Transformers.ipynb  requirements.txt
IS329_fouille/tp4/: Intro-Images.ipynb  LeNet.ipynb  requirements.txt
IS329_fouille/tp5/: AutoEncoders.ipynb  AutoEncodersSolution.ipynb
IS329_fouille/tp6/: GAN.ipynb  (+1 more)
IT395_toolsEnvHPC/: note.md  sbatchScript.sh
algoHPC/: .gitignore  RapportTP0.md  notesTpBatchScheduling.md  rapportTpLoad.md  rapportTpTask.md
algoNum/: noteLAN.md  plafrim-env.sh  tuckerTp.py  tucker_tools.py
cf/: .gitignore  elevator.alt  elevator.spe  run-altarica.sh  tp01.alt  tp02.alt
ia/: main-chess.py  starter-chess.py  td01.md  td02.md  tictactoe.tgz
logic/: DMCharlesGoedefroit.v  TP_Gaulois.v  TP_vehiculesCharlesGoedefroit.v  logique_propositionnelle.v  minimale.v  negation.v  premier_ordre_exos.v
network/: HackOnMe.md  httpge.py  rendu01.md  rendu02.md  rendu03.md
os/: .gitignore
other/: chatGPT.ipynb  covid19.ipynb  memc.c  memcAsm.c  vncstart.sh
pap/: .gitignore
poo/: .gitignore
prjHPC/: TP0.md  notes.md
prjTec/recolor/: .gitignore  CMakeLists.txt  README.md  cmake_uninstall.cmake.in  game.c  game.h  game_io.c  game_io.h  getline.c  rand_recolor_text.c.txt  recolor_solve.c  recolor_text.c  solution.c  solution.h  test_game_arblondeau.c  test_game_cgoedefroit.c  test_game_vandrault.c  test_solution_arblondeau.c  toutdoux.md
prjTec/recolor/android/: AndroidManifest.xml  download.sh
prjTec/recolor/android/jni/src/: Android.mk  Makefile  fun_sdl.c  fun_sdl.h  game.c  game.h  game_io.c  game_rand.c  game_rand.h  load_game.c  load_game.h  main_sdl.c  recolor_sdl.c
prjTec/recolor/android/res/layout/: activity_recolor.xml
prjTec/recolor/android/res/values/: strings.xml
prjTec/recolor/android/src/fr/toutdoux/recolor/: RecolorActivity.java
prjTec/recolor/android/src/org/libsdl/app/: SDLActivity.java
prjTec/recolor/assets/: Recolor.desktop  ressourses.rc
prjTec/recolor/data/: .gitignore
prjTec/recolor/include/: SDL_model.h  fun_sdl.h  game.h  game_io.h  game_rand.h  load_game.h  solution.h
prjTec/recolor/lib/: game.c  game_io.c  solution.c
prjTec/recolor/src/: fun_sdl.c  game_rand.c  load_game.c  main_sdl.c  recolor_sdl.c  recolor_solve.c  recolor_text.c
prjTec/recolor/tests/: test_game_arblondeau.c  test_game_cgoedefroit.c  test_game_vandrault.c
prjTec/recolor_V1/src/: .gitignore  CMakeLists.txt  Makefile  depends.txt  game.c  game.h  game_io.c  note.txt  recolor_text  recolor_text.c  test_game_arblondeau.c  test_game_cgoedefroit.c  test_game_vandrault.c  toutdoux.txt
prjTec/tpCMake/2/tsp/: .gitignore  CMakeLists.txt  bays10.tsp  ch130.tsp  convert-2D-to-full.c  matrice2d.h  memoire.c
prjTec/tpCMake/3/hierarchie-source-cmake/: CMakeLists.txt
prjTec/tpCMake/3/hierarchie-source-cmake/bcb/: CMakeLists.txt
prjTec/tpCMake/3/hierarchie-source-cmake/bcb/chaine/: chaine.c  chaine.h
prjTec/tpCMake/3/hierarchie-source-cmake/bcb/memoire/: memoire.c  memoire.h
prjTec/tpCMake/3/hierarchie-source-cmake/magasin/: CMakeLists.txt  client.c  client.h  magasin.c
prjTec/tpCMake/3/hierarchie-source-cmake/sdd/: CMakeLists.txt
prjTec/tpCMake/3/hierarchie-source-cmake/sdd/file/: file.c  file.h
prjTec/tpCMake/3/hierarchie-source-cmake/sdd/paire/: paire.c  paire.h
prjTec/tpCMake/3/hierarchie-source-cmake/sdd/vext/: CMakeLists.txt  test-vext-1.c  test-vext-2.c  test-vext-3.c  test-vext-4.c  test-vext-5.c  test-vext-6.c  vext.c  vext.h
prog3D/: note.md
prog3D/mds3d_td1/: .clang-format  .gitignore  CMakeLists.txt  note.md
prog3D/mds3d_td1/data/: checkboard.exr  deuxPlans.scn  lune.exr  petanque.scn  phong.scn  tasSpheres.scn  terre-lune.scn  terre.exr  troisSpheres.scn
prog3D/mds3d_td1/include/: bitmap.h  block.h  camera.h  contentPanel.h  object.h  parser.h  plane.h  ray.h  shape.h  viewer.h
prog3D/mds3d_td1/src/: bitmap.cpp  camera.cpp  contentPanel.cpp  direct.cpp  directionalLight.cpp  flat.cpp  main.cpp  material.cpp  normals.cpp  object.cpp  parser.cpp  phong.cpp  plane.cpp  pointLight.cpp  scene.cpp  shape.cpp  sphere.cpp  texcoords.cpp  viewer.cpp  whitted.cpp
progC/: mallocTest.c
progFun/: aDS.ml  note.txt
projet/: docker-compose.yml
prs/: cat.c
psc/: tm1.py  tm2.py  tm3.py
tap/: reponses.txt
toolsEnvHPC/: note.md
(+1291 files in other folders)
